--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body{
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
   }
   
   /* Track */
@@ -275,8 +276,6 @@ body{
   margin-right: 15px;
   padding: 16px;
   color: #000000;
-  background-color: #dcdcdc;
-  border: 2px solid #dcdcdc;
   font-size: 18px;
   font-weight: 800;
   transition: 0.6s ease;
@@ -292,8 +291,6 @@ body{
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   color: #e31e24;
-  background-color: #ffffff;
-  border: 2px solid #e31e24;
 }
 .pagetitlebg img {
     margin-top: 150px;
@@ -354,6 +351,7 @@ body{
 .homecontainer .image img{
   padding: 2%;
   width: 100%;
+  border-radius: 10%;
 }
 .homeexpertise{
   display: flex;
@@ -679,79 +677,74 @@ body{
   padding-bottom: 30px;
   text-align: left;
 }
-.processcont .flowchart{
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  flex-direction: column;
-}
-.processcont .flowchart .flow1,
-.processcont .flowchart .flow2,
-.processcont .flowchart .flow3,
-.processcont .flowchart .flow4,
-.processcont .flowchart .flow5,
-.processcont .flowchart .flow6,
-.processcont .flowchart .flow7{
+.flowchart{
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: center;
   width: 100%;
-  align-items: center;
-  padding-bottom: 25px;
+  box-shadow: 0 8px 16px 0 rgba(44, 43, 43, 0.911);
+  border-radius: 0 30px 30px 0;
+  border: 2px solid #dcdcdc;
+  margin: 0 7% 40px;
 }
-.processcont .flowchart i{
-  position: absolute;
-  color: #e31e24;
-  margin-top: 15px;
-  margin-left: -5.5px;
+.flowchart .left-image{
+  width: 40%;
+  position: relative;
 }
-.processcont .flowchart .linestartflow{
-  height: 24px;
-  width: 3px;
-  margin-top: -81px;
-  position: absolute;
-  background-color: #e31e24;
+.flowchart .left-image img{
+  width: 100%;
+  height: 100%;
+  border-radius: 0 0 200px;
 }
-.processcont .flowchart span{
-  padding: 10px 5px 10px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 350px;
-  height: 55px;
-  align-content: center;
-  text-align: center;
-  background-color: #dcdcdc;
-  font-size: 20px;
-  font-weight: 400;
-  border: 2px solid #e31e24;
+.flowchart .right-text{
+  width: 60%;
+  align-self: center;
+  padding: 2% 4% 2%;
 }
-.processflow{
+/*.processflow{
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   padding: 0 0 30px;
   color: #000000;
   text-align: justify;
-}
-.processflow .parag{
-  padding-left: 90px;
+}*/
+.flowchart .parag{
   width: 100%;
-  padding-right: 90px;
   font-size: 16px;
   font-weight: 400; 
 }
-.processflow i{
+.flowchart .centeredtitle {
+  position: absolute;
+  top: 0;
+  background: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  padding: 2%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius:  0 0 200px;
+}
+.flowchart .sub-title{
+  font-size: 24px;
+  color: #ffffff;
+  font-family: 'Bitter', serif;
+  padding-left: 5%;
+  width: 100%;
+  padding-right: 5%;
+  font-weight:  600;
+  text-align: left;
+  position: relative;
+}
+.headingflow i{
   font-size: 12px;
   margin-right: 10px;
   color: #e31e24;
 }
-.processflow .heading{
-  font-size: 18px;
-  font-weight: 600;
-}
-.processflow .points{
+.headingflow .points{
   padding-left: 120px;
   padding-right: 120px;
 }
@@ -787,22 +780,35 @@ body{
     margin-top: 14px;
     height: 40px; 
   }
-  .processcont .flowchart {
-    padding-left: 60px;
+  .flowchart{
+    flex-direction: column;
+    border-radius: 0 0 30px 30px;
   }
-  .processcont .flowchart .linestartflow{
-    margin-top: -72px;
+  .flowchart .left-image{
+    width: 100%;
   }
-  .processcont .flowchart span{
-    font-size: 16px;
-    width: 220px;
-    height: 45px;
+  .flowchart .right-text{
+    width: 100%;
+    padding: 4% 6% 4%;
   }
-  .processflow .parag{
+  .flowchart .left-image img{
+    border-radius: 0;
+  }
+  .flowchart .centeredtitle {
+    border-radius:  0;
+  }
+  .flowchart .sub-title{
+    font-size: 20px;
+    text-align: center;
+  }
+  .flowchart .parag{
+    font-size: 15px;
+  }
+  /*.processflow .parag{
     padding-left: 0;
     padding-right: 0;
     font-size: 15px; 
-  }
+  }*/
   .processcont .subtitle,.headingflow .subtitle{
     font-size: 18px;
     padding-left: 20px;
@@ -818,10 +824,7 @@ body{
     padding-right: 0px;
     font-size: 15px;
   }
-  .processflow .heading{
-    font-size: 16px;
-  }
-  .processflow .points{
+  .headingflow .points{
     padding-left: 60px;
     padding-right: 0px;
   }
@@ -833,7 +836,7 @@ body{
 }
 /*--------------------------------------------------------------
 # Navigation Menu
---------------------------------------------------------------*/
+--------------------------------------------------------------
 /*--------------------------------------------------------------
 # product page
 --------------------------------------------------------------*/
@@ -1004,7 +1007,7 @@ body{
 .aboutusabout{
   display: flex;
   flex-wrap: wrap;
-  padding: 40px;
+  padding: 40px 14% 40px;
   color: #000000;
   text-align: justify;
 }
@@ -1062,6 +1065,9 @@ body{
   font-weight: 400; 
 }
 @media screen and (max-width: 800px){
+  .aboutusabout{
+    padding: 40px;
+  }
   .aboutusabout .title{
     padding-left: 20px;
     padding-right: 0;
@@ -1323,7 +1329,7 @@ body{
   }
   .quickfooter .quickaddress{
     width: 90%;
-    height:230px;
+    height:260px;
     border-right: none;
     border-bottom: 2px solid #e31e24;
   }
@@ -1442,11 +1448,45 @@ body{
   padding-bottom: 30px;
   text-align: left;
 }
+.main-content .cfc-images, .main-content .cfl-images{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-bottom: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.cfc-images .img-left{
+  width: 55%;
+}
+.cfc-images .img-right{
+  width: 40%;
+}
+.cfl-images .img-left{
+  width: 30%;
+}
+.cfl-images .img-middle{
+  width: 32%;
+}
+.cfl-images .img-right{
+  width: 32%;
+}
+.main-content .cfc-images img, .main-content .cfl-images img{
+  width: 100%;
+  border-radius: 10%;
+  height: 100%;
+}
+.table-main{
+  overflow-x:auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 30px;
+}
 table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
-  margin-bottom: 30px;
   border: 2px solid #e31e24;
 }
 
@@ -1515,6 +1555,27 @@ td {
     padding-left: 0px;
     padding-right: 0;
     font-size: 24px;
+  }
+  .main-content .cfc-images{
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 0;
+    padding-bottom: 0;
+    padding-right: 0;
+  }
+  .cfc-images .img-left,
+  .cfc-images .img-right,
+  .cfl-images .img-left,
+  .cfl-images .img-middle,
+  .cfl-images .img-right{
+    width: 100%;
+    padding-bottom: 30px;
+  }
+  .table-main{
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    margin-bottom: 30px;
   }
   th{
     font-size: 16px;
