--- a/css/styles.css
+++ b/css/styles.css
@@ -666,17 +666,6 @@ body{
   padding-bottom: 30px;
   text-align: left;
 }
-.processcont .subsubtitle,.processflow .subsubtitle{
-  font-size: 24px;
-  color: #e31e24;
-  font-family: 'Bitter', serif;
-  padding-left: 90px;
-  width: 100%;
-  padding-right: 90px;
-  font-weight:  600;
-  padding-bottom: 30px;
-  text-align: left;
-}
 .flowchart{
   display: flex;
   flex-wrap: wrap;
@@ -701,14 +690,6 @@ body{
   align-self: center;
   padding: 2% 4% 2%;
 }
-/*.processflow{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  padding: 0 0 30px;
-  color: #000000;
-  text-align: justify;
-}*/
 .flowchart .parag{
   width: 100%;
   font-size: 16px;
@@ -739,14 +720,21 @@ body{
   text-align: left;
   position: relative;
 }
-.headingflow i{
-  font-size: 12px;
-  margin-right: 10px;
-  color: #e31e24;
-}
-.headingflow .points{
-  padding-left: 120px;
-  padding-right: 120px;
+.marketcont .centered-title {
+  position: absolute;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 0 0 15px 15px;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 400; 
+  width: 100%;
+  padding: 20px;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .headingflow{
   display: flex;
@@ -804,29 +792,15 @@ body{
   .flowchart .parag{
     font-size: 15px;
   }
-  /*.processflow .parag{
-    padding-left: 0;
-    padding-right: 0;
-    font-size: 15px; 
-  }*/
   .processcont .subtitle,.headingflow .subtitle{
     font-size: 18px;
     padding-left: 20px;
     padding-right: 20px;
   }
-  .processcont .subsubtitle,.processflow .subsubtitle{
-    font-size: 18px;
-    padding-left: 40px;
-    padding-right: 40px;
-  }
   .processflow .parag{
     padding-left: 40px;
     padding-right: 0px;
     font-size: 15px;
-  }
-  .headingflow .points{
-    padding-left: 60px;
-    padding-right: 0px;
   }
   .headingflow .parag{
     padding-left:20px;
