--- a/css/styles.css
+++ b/css/styles.css
@@ -489,6 +489,11 @@ body{
   display: block;
   width: 100%;
   border-radius: 15px;
+  transition: transform .4s;
+}
+.marketcont .image1:hover{
+  transform: scale(1.3);
+  transform-origin: 50% 50%;
 }
 .marketcont .centeredtitle {
   position: absolute;
