--- a/css/styles.css
+++ b/css/styles.css
@@ -382,6 +382,7 @@ body{
   width: 215px;
   margin-left: 265px;
   margin-top: 18px;
+  display: block;
   height: 40px;
   position: absolute;
   border-top: 2px solid #e31e24;  
@@ -583,8 +584,8 @@ body{
     height: 40px;
   }
   .homeexpertise .lineend{
-    width: 90px;
-    margin-left: 180px;
+    width: 110px;
+    margin-left: 160px;
     margin-top: 14px;
     height: 40px; 
   }
@@ -626,6 +627,12 @@ body{
     height: 400px;
   }
 }
+@media screen and (max-width: 400px){
+  .homeexpertise .lineend{
+    display: none;
+  }
+}
+
 /*--------------------------------------------------------------
 # Home end
 --------------------------------------------------------------*/
